Get basic album info working with knockout. Add in Glimpse diagnostics (so cool!) Get delete album working
Next: Figure out how to get live album add/move working

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-m4d-20140305044409.mdf;Initial Catalog=aspnet-m4d-20140305044409;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -30,16 +30,19 @@
     <httpRuntime targetFramework="4.5" />
     <trace enabled="true" writeToDiagnosticsTrace="true" mostRecent="true" pageOutput="false" />
     <customErrors mode="RemoteOnly"></customErrors>
-    <httpModules>
+    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" />
-    </httpModules>
-  </system.web>
+    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules>
+  <httpHandlers>
+            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+        </httpHandlers></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" preCondition="managedHandler" />
-    </modules>
+    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
     <!--<staticContent>
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>-->
@@ -50,7 +53,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -108,6 +111,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -201,4 +208,9 @@
       <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding10" contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUS" />
     </client>
   </system.serviceModel>
-</configuration>
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- 
+          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+      -->
+    </glimpse></configuration>
