--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -6,6 +6,10 @@
   <package id="chosen.jquery" version="1.1.0" targetFramework="net45" />
   <package id="EFUtilities" version="0.4.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net45" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net45" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
+  <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
