--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -324,6 +324,8 @@
     <Content Include="Content\header-logo.png" />
     <Content Include="Content\itunes-charm.png" />
     <Content Include="Content\itunes-logo.png" />
+    <Content Include="Content\jquery.nouislider.css" />
+    <Content Include="Content\jquery.nouislider.pips.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\thermometer-0.png" />
     <Content Include="Content\thermometer-1.png" />
@@ -388,6 +390,8 @@
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.nouislider.full.min.js" />
+    <Content Include="Scripts\jquery.nouislider.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
