--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="SongTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongFilterTests.cs" />
+    <Compile Include="TrackTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
