--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -75,6 +75,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="MockFactories.cs" />
+    <Compile Include="MockTagLibrary.cs" />
     <Compile Include="MockUserMap.cs" />
     <Compile Include="SongDetailTests.cs" />
     <Compile Include="SongTests.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="SongFilterTests.cs" />
     <Compile Include="TrackTests.cs" />
     <Compile Include="AlbumTrackTests.cs" />
+    <Compile Include="TagTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
