Basic automated themse working

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -5,9 +5,20 @@
   -->
 <configuration>
   <configSections>
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+    <sectionGroup name="bundleTransformer">
+      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
+      <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
+    </sectionGroup>
+    <sectionGroup name="jsEngineSwitcher">
+      <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
+      <section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" />
+    </sectionGroup>
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-m4d-20140305044409.mdf;Initial Catalog=aspnet-m4d-20140305044409;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -18,7 +29,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="recaptchaPublicKey" value="***REMOVED***" />
     <add key="recaptchaPrivateKey" value="***REMOVED***" />
-  <add key="recaptchaPublicKey" value="" /><add key="recaptchaPrivateKey" value="" /></appSettings>
+    <add key="recaptchaPublicKey" value="" />
+    <add key="recaptchaPrivateKey" value="" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5">
@@ -31,29 +44,36 @@
     <trace enabled="true" writeToDiagnosticsTrace="true" mostRecent="true" pageOutput="false" />
     <customErrors mode="RemoteOnly"></customErrors>
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+    <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" />
-    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules>
-  <httpHandlers>
-            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers></system.web>
+      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+    </httpModules>
+    <httpHandlers>
+      <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+    </httpHandlers>
+  </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" preCondition="managedHandler" />
-    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
+      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+    </modules>
     <!--<staticContent>
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>-->
-  
-  <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers></system.webServer>
+      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+      <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -125,12 +145,12 @@
         <databaseInitializer type="m4dModels.DanceMusicInitializer, m4d" />
       </context>
     </contexts>    
-    -->    
+    -->
     <!--<contexts>
       <context type="m4dModels.DanceMusicContext, m4d">
         <databaseInitializer type="System.Data.Entity.DropCreateDatabaseAlways`1[[m4dModels.DanceMusicContext, m4d]], EntityFramework" />
       </context>
-    </contexts>-->    
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
@@ -154,7 +174,7 @@
          "4" gives verbose trace information -->
       <add name="General" value="0" />
     </switches>
-  </system.diagnostics>  
+  </system.diagnostics>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -208,15 +228,58 @@
       <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding10" contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUS" />
     </client>
   </system.serviceModel>
-<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-      <!-- 
+  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+    <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. -->
-  <runtimePolicies>
-    <ignoredTypes>
-      <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet" />
-    </ignoredTypes>
-  </runtimePolicies>
-  <!--<logging level="Trace" />-->
+    <runtimePolicies>
+      <ignoredTypes>
+        <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet" />
+      </ignoredTypes>
+    </runtimePolicies>
+    <!--<logging level="Trace" />-->
   </glimpse>
+  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
+    <core>
+      <css defaultMinifier="MicrosoftAjaxCssMinifier">
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
+        </translators>
+        <postProcessors>
+          <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
+        </postProcessors>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
+        <fileExtensions>
+          <add fileExtension=".css" assetTypeCode="Css" />
+          <add fileExtension=".less" assetTypeCode="Less" />
+        </fileExtensions>
+      </css>
+      <js>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        </translators>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
+        <fileExtensions>
+          <add fileExtension=".js" assetTypeCode="JavaScript" />
+        </fileExtensions>
+      </js>
+    </core>
+    <less useNativeMinification="false" ieCompat="true" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
+      <jsEngine name="MsieJsEngine" />
+    </less>
+  </bundleTransformer>
+  <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
+    <core>
+      <engines>
+        <add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" />
+      </engines>
+    </core>
+  </jsEngineSwitcher>
 </configuration>
