--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="5.11.5295.12309" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.9.13" targetFramework="net45" />
+  <package id="BundleTransformer.Less" version="1.9.20" targetFramework="net45" />
+  <package id="BundleTransformer.MicrosoftAjax" version="1.9.13" targetFramework="net45" />
   <package id="chosen" version="1.1.0" targetFramework="net45" />
   <package id="chosen.jquery" version="1.1.0" targetFramework="net45" />
   <package id="EFUtilities" version="0.4.0" targetFramework="net45" />
@@ -11,6 +15,8 @@
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.1.3" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.1.11" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
@@ -40,6 +46,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.2" targetFramework="net45" />
+  <package id="MsieJavaScriptEngine" version="1.4.4" targetFramework="net45" />
   <package id="MvcDiagnostics" version="5.2.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
@@ -47,5 +54,6 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="RecaptchaNet" version="1.6.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
