Remove genre column in song database

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -312,6 +312,10 @@
     <Compile Include="Migrations\201409030007328_Tags.Designer.cs">
       <DependentUpon>201409030007328_Tags.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201409222232418_RemoveGenre.cs" />
+    <Compile Include="Migrations\201409222232418_RemoveGenre.Designer.cs">
+      <DependentUpon>201409222232418_RemoveGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
     <Compile Include="Context\DanceMusicContext.cs" />
@@ -699,6 +703,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201409030007328_Tags.resx">
       <DependentUpon>201409030007328_Tags.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201409222232418_RemoveGenre.resx">
+      <DependentUpon>201409222232418_RemoveGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
