--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -52,8 +52,9 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
-  <package id="RecaptchaNet" version="1.6.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Sendgrid" version="4.0.0" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="3.2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
