Get email verification, password reset, and external account management working

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -27,10 +27,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="recaptchaPublicKey" value="***REMOVED***" />
-    <add key="recaptchaPrivateKey" value="***REMOVED***" />
-    
-    
+    <add key="mailAccount" value="music4dance" />
+    <add key="mailPassword" value="abHAbRSs_ttLqpj0" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -63,14 +61,7 @@
     <!--<staticContent>
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>-->
-
-    
     <handlers>
-      
-      
-      
-      
-      
       <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
     <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /><remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
   <validation validateIntegratedModeConfiguration="false" /></system.webServer>
