Stick the sample bindings that (at least on my main dev machine) allow me to debug microsoft and facebook login locally.

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -3,6 +3,17 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
+
+<!--
+
+Sample binding in application.config for iisexpress
+
+<binding protocol="https" bindingInformation="*:44301:localhost" />
+<binding protocol="http" bindingInformation="*:21133:localhost" />
+<binding protocol="https" bindingInformation="127.0.0.1:44301:live.www.music4dance.net" />
+<binding protocol="http" bindingInformation="127.0.0.1:21133:live.www.music4dance.net" />
+-->
+
 <configuration>
   <configSections>
 
